# proyecto-arep

./: .gitignore  README.md
adr/: 001-stack-fastapi-react.md  002-rag-traceability.md  003-jwt-roles.md  004-data-and-fhir.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  consultations.py  meta.py  professional_cases.py
backend/app/core/: security.py
backend/app/repositories/: in_memory.py
backend/app/schemas/: domain.py
backend/app/services/: rag_service.py  triage_engine.py
backend/arep_triage_backend.egg-info/: PKG-INFO  SOURCES.txt
docs/architecture/: 01-c4-context.mmd  02-c4-container.mmd  03-backend-components.mmd  04-sequence-triage.mmd  05-sequence-escalation.mmd  06-aws-deployment.mmd  07-data-model.mmd  README.md  traceability-matrix.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  mockData.ts  styles.css  types.ts
frontend/src/components/: ArchitectureBrief.tsx  PatientWorkspace.tsx  ProfessionalWorkspace.tsx
knowledge-base/: README.md
knowledge-base/clinical-guidelines/: general-triage.md  red-flags.md  self-care-boundaries.md
paper/: README.md  main.tex  references.bib
