[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arep-triage-backend"
version = "0.1.0"
description = "Backend base para el MVP de triaje medico AREP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
